--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,7 +1,14 @@
-main {
+body {
   font-family: 'PT Mono', monospace;
   width: 100%;
   height: 100%;
   text-align: center;
   margin: 0;
+}
+
+main {
+  padding: 3% 5% 0% 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
