--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -25,3 +25,10 @@
   width: 50%;
   align-self: center;
 }
+
+@media screen and (max-width: 400px) {
+  .contact-form {
+    width: 80%;
+    margin: 0;
+  }
+}
