--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -7,3 +7,15 @@
   border-radius: 10px;
   padding-left: 2%;
 }
+
+@media screen and (max-width: 400px) {
+  .side-bar {
+    width: 40%;
+    font-size: .5em;
+    margin: 0;
+  }
+  .side-bar > ul {
+    margin: 0;
+    padding: 0;
+  }
+}
