--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -11,5 +11,5 @@ main {
   padding: 3% 7% 0% 6.5%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
 }
