--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -8,6 +8,19 @@
   padding-left: 2%;
 }
 
+@media screen and (max-width: 900px) {
+  .side-bar {
+    width: 30%;
+  }
+  .side-bar > ul {
+    margin: 10%;
+    padding: 0;
+  }
+  .side-bar > ul > li {
+    padding: 5%;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .side-bar {
     width: 40%;
