Add padding to list elements on side bar

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -8,6 +8,10 @@
   padding-left: 2%;
 }
 
+.side-bar > ul > li {
+  padding: 5%
+}
+
 @media screen and (max-width: 900px) {
   .side-bar {
     width: 30%;
@@ -15,9 +19,6 @@
   .side-bar > ul {
     margin: 10%;
     padding: 0;
-  }
-  .side-bar > ul > li {
-    padding: 5%;
   }
 }
 
