Filled out initial content for ListenUp

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -6,8 +6,24 @@
 .main-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-img {
-  height: 38%;
+p {
+  width: 100%;
+  text-align: justify;
+}
+
+.image-cont {
+  width: 100%;
+  display: flex;
+}
+
+.ss-cont {
+  width: 50%;
+}
+
+.screen-shots {
+  width: 100%;
+  aspect-ratio: 2/1;
 }
