--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -6,7 +6,8 @@
   width: 18%;
   border-radius: 10px;
   padding-left: 2%;
-  margin-right: 15%;
+  padding-right: 7%;
+  margin-right: 10%;
 }
 
 .side-bar > ul > li {
