--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -1,6 +1,7 @@
 .landing {
   width: 100%;
   display: flex;
+  flex-direction: row;
 }
 
 .main-content {
@@ -26,4 +27,9 @@ p {
 .screen-shots {
   width: 100%;
   aspect-ratio: 2/1;
+}
+
+.proj-cont {
+  display: flex;
+  flex-direction: column;
 }
