Add techologies content

--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  font-family: 'Verdana'
 }
 
 .main-content {
@@ -32,4 +33,18 @@ p {
 .proj-cont {
   display: flex;
   flex-direction: column;
+}
+
+.links {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.tech {
+  width: 50%;
+  margin-bottom: 10%
+}
+
+h2 {
+  font-size: 1.3em;
 }
