--- a/src/Components/Landing/Landing.css
+++ b/src/Components/Landing/Landing.css
@@ -33,6 +33,7 @@ p {
 .proj-cont {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .links {
@@ -41,7 +42,7 @@ p {
 }
 
 .tech {
-  width: 50%;
+  width: 60%;
   margin-bottom: 10%
 }
 
