--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,13 +1,17 @@
 body, .App {
-  font-family: 'PT Mono', monospace;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
   width: 100%;
   text-align: center;
   margin: 0;
+  background-color: black;
+  color: white;
 }
 
 main {
   padding: 3% 7% 0% 6.5%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
