--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,4 +1,4 @@
-body, .App {
+html, body, .App {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   width: 100%;
@@ -9,9 +9,18 @@ body, .App {
 }
 
 main {
-  padding: 3% 7% 0% 6.5%;
+  width: 100vw;
+  /* padding: 3% 7% 3% 6.5%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+a {
+  color: white;
+}
+
+a:hover {
+  color:rgb(255, 195, 0)
 }
