--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
   padding: 5% 5% 0% 5%;
+  margin-bottom: 3%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
