--- a/src/Components/Landing/Landing2.css
+++ b/src/Components/Landing/Landing2.css
@@ -1,6 +1,11 @@
 .intro {
   margin-top: 10%;
-  width: 45%;
+  width: 60%;
+}
+
+.intro > h1 {
+  letter-spacing: .2em;
+  text-align: center;
 }
 
 .name {
