--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -8,4 +8,12 @@
 
 a {
   text-decoration: none;
+  font-weight: 600;
+  letter-spacing: .3em;
+  transition: all .2s ease-in;
 }
+
+a:hover {
+  letter-spacing: .2em;
+}
+
