--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,11 @@
 .header {
-  padding: 5% 5% 0% 5%;
+  padding: .5% 0% .5% 0%;
   margin-bottom: 3%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-content: center;
+  background-color: rgb(0, 53, 102);
 }
 
 .logo {
