--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,12 +1,14 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  width: 50%;
+  width: 25%;
+  height: 5%;
 }
 
 a {
+  font-size: .8em;
   text-decoration: none;
   font-weight: 600;
   letter-spacing: .3em;
