--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -48,7 +48,8 @@
 
 .project-front {
   box-sizing: border-box;
-  border-radius: 10px;
+  /* padding: 1%; */
+  border-radius: 2px;
   background-repeat: no-repeat;
   background-size:auto;
   background-position: center;
@@ -56,6 +57,7 @@
 
 .project-front > img {
   height: 100%;
+  border: 1.5px solid rgb(255, 255, 255, 0.355);
 }
 
 .project-back {
@@ -65,7 +67,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.7);
-  border: 1px solid white;
+  border: 1px solid rgb(255, 255, 255, 0.355);
   border-radius: 5px;
   color: white;
   box-sizing: border-box;
@@ -97,7 +99,7 @@
 }
 
 .project-back > p {
-  font-size: 1.1em;
+  font-size: .9em;
   margin: .3em;
   letter-spacing: .1em;
   text-align: center;
