--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,15 +1,13 @@
-html, body, .App {
+html, body, .App, #root {
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
-  width: 100%;
   text-align: center;
   margin: 0;
-  background-color: black;
+  background-color: rgba(0, 8, 20);
   color: white;
 }
 
 main {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
