--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -66,7 +66,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(38, 70, 83);
   border: 1px solid rgb(255, 255, 255, 0.355);
   border-radius: 5px;
   color: white;
@@ -82,7 +82,7 @@
 }
 
 .links > a {
-  color:rgb(255, 195, 0);
+  color:rgb(233, 196, 106);
   letter-spacing: .5em;
   transition: all .2s ease-in;
 }
@@ -92,7 +92,7 @@
 }
 
 .project-back > h2 {
-  color: rgb(255, 195, 0);
+  color: rgb(233, 196, 106);
   letter-spacing: .1em;
   margin: .3em;
   font-size: 1.8em;
