--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -5,13 +5,7 @@ html, body, .App, #root {
   margin: 0;
   background-color: rgba(38, 70, 83);
   color: white;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
 }
 
 a {
