--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -2,8 +2,21 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-right: 4em;
   align-items: center;
+}
+
+.contact-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-page > p {
+  font-size: 1.2em;
+  width: 40%;
+  letter-spacing: .2em;
+  line-height: 1.4em;
+  justify-content: center;
 }
 
 .form-inputs {
@@ -16,10 +29,14 @@
   font-family: 'Raleway', sans-serif;
   margin: 1%;
   width: 50%;
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.189);
+  border: 0;
+  border-radius: 4px;
 }
 
 .message {
   height: 23rem;
+  width: 50%;
 }
 
 .submit {
