--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -34,3 +34,21 @@
   text-align-last: center;
   line-height: 1.4em;
 }
+
+.bar-chart {
+  width: 100%;
+  margin-top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.chart {
+  width: 70%;
+}
+
+.bar-chart > h2 {
+  letter-spacing: .5em;
+  font-size: 2em;
+}
