--- a/src/Components/Landing/Landing2.css
+++ b/src/Components/Landing/Landing2.css
@@ -18,9 +18,31 @@
   color: rgb(233, 196, 106);
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 1200px) {
   .intro > h1 {
-    font-size: 1.5em;
+    margin-top: 25%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .intro > h1 {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 815px) {
+  .intro > h1 {
+    font-size: 2em;
     letter-spacing: .1em;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .intro > h1 {
+    /* text-align: center; */
+    font-size: 1.3em;
+    letter-spacing: normal;
+    width: 85%;
+    margin-top: 50%;
   }
 }
