--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -130,6 +130,12 @@
   }
 }
 
+@media screen and (max-width: 900px) {
+  .links > a:hover {
+    letter-spacing: normal;
+  }
+}
+
 @media screen and (max-width: 621px) {
   .project {
     height: 145px;
@@ -141,8 +147,5 @@
   }
   .title {
     padding-left: 4%;
-  }
-  .links > a:hover {
-    letter-spacing: normal;
   }
 }
